--- a/Jspace/src/index.html
+++ b/Jspace/src/index.html
@@ -9,6 +9,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root>Test blabla</app-root>
 </body>
 </html>
